--- a/finder.html
+++ b/finder.html
@@ -31,7 +31,7 @@
 </div>
 
 
-
+  <script src="token.js"></script>
   <script src="gitHub.js"></script>
   <script src="ui.js"></script>
   <script src="app.js"></script>
